--- a/.github/workflows/build-npu-images.yml
+++ b/.github/workflows/build-npu-images.yml
@@ -2,182 +2,86 @@ name: Build NPU Docker Images
 
 on:
   push:
-    branches: [main, master]
+    branches: [ main, master ]
     paths:
-      - "npu/**"
-      - "config/npu/**"
-      - ".github/workflows/build-npu-images.yml"
+      - 'npu/**'
+      - 'config/npu/**'
+      - '.github/workflows/build-npu-images.yml'
   workflow_dispatch:
     inputs:
       image_type:
-        description: "Image type to build"
+        description: 'Image type to build'
         required: false
-        default: "all"
+        default: 'all'
         type: choice
         options:
           - all
           - training
           - inference
           - stress
-      platform:
-        description: "Platform to build"
-        required: false
-        default: "both"
-        type: choice
-        options:
-          - amd64
-          - arm64
-          - both
 
 env:
   REGISTRY: docker.io
   IMAGE_NAME: shaowenchen/xpu-benchmark
 
 jobs:
-  # Stage 1: Build and push arm64 images
-  build-arm64-training:
+  build:
     runs-on: ubuntu-latest
-    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'training' || github.event.inputs.image_type == ''
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push arm64 training image
-        run: |
-          docker build --platform linux/arm64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-arm64 -f npu/training/Dockerfile npu/training
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-arm64
-        shell: bash
-      - name: Create multi-arch training image
-        run: |
-          docker manifest create ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-amd64 \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-arm64
-          docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest
-        shell: bash
+    strategy:
+      matrix:
+        image_type: [training, inference, stress]
+        include:
+          - image_type: training
+            dockerfile: npu/training/Dockerfile
+            context: npu/training
+            tag: npu-training
+          - image_type: inference
+            dockerfile: npu/inference/Dockerfile
+            context: npu/inference
+            tag: npu-inference
+          - image_type: stress
+            dockerfile: npu/stress/Dockerfile
+            context: npu/stress
+            tag: npu-stress
 
-  build-arm64-inference:
-    runs-on: ubuntu-latest
-    needs: build-arm64-training
-    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'inference' || github.event.inputs.image_type == ''
     steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push arm64 inference image
-        run: |
-          docker build --platform linux/arm64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-arm64 -f npu/inference/Dockerfile npu/inference
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-arm64
-        shell: bash
-      - name: Create multi-arch inference image
-        run: |
-          docker manifest create ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-amd64 \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-arm64
-          docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest
-        shell: bash
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-  build-arm64-stress:
-    runs-on: ubuntu-latest
-    needs: build-arm64-inference
-    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'stress' || github.event.inputs.image_type == ''
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push arm64 stress image
-        run: |
-          docker build --platform linux/arm64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-arm64 -f npu/stress/Dockerfile npu/stress
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-arm64
-        shell: bash
-      - name: Create multi-arch stress image
-        run: |
-          docker manifest create ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-amd64 \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-arm64
-          docker manifest push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest
-        shell: bash
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
 
-  # Stage 2: Build and push amd64 images
-  build-amd64:
-    runs-on: ubuntu-latest
-    needs: build-arm64-stress
-    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'training' || github.event.inputs.image_type == ''
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push amd64 training image
-        run: |
-          docker build --platform linux/amd64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-amd64 -f npu/training/Dockerfile npu/training
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-training-latest-amd64
-        shell: bash
+    - name: Log in to Docker Hub
+      if: github.event_name != 'pull_request'
+      uses: docker/login-action@v3
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  build-inference-amd64:
-    runs-on: ubuntu-latest
-    needs: build-amd64
-    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'inference' || github.event.inputs.image_type == ''
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push amd64 inference image
-        run: |
-          docker build --platform linux/amd64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-amd64 -f npu/inference/Dockerfile npu/inference
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-inference-latest-amd64
-        shell: bash
+    - name: Extract metadata
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=raw,value=${{ matrix.tag }}-latest
 
-  build-stress-amd64:
-    runs-on: ubuntu-latest
-    needs: build-inference-amd64
-    if: github.event.inputs.image_type == 'all' || github.event.inputs.image_type == 'stress' || github.event.inputs.image_type == ''
-    steps:
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push amd64 stress image
-        run: |
-          docker build --platform linux/amd64 -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-amd64 -f npu/stress/Dockerfile npu/stress
-          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:npu-stress-latest-amd64
-        shell: bash
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v5
+      with:
+        context: ${{ matrix.context }}
+        file: ${{ matrix.dockerfile }}
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        platforms: linux/amd64,linux/arm64
+
+    - name: Build summary
+      if: always()
+      run: |
+        echo "Built image: ${{ matrix.tag }}"
+        echo "Context: ${{ matrix.context }}"
+        echo "Dockerfile: ${{ matrix.dockerfile }}"
