--- a/.github/workflows/build-gpu-images.yml
+++ b/.github/workflows/build-gpu-images.yml
@@ -63,3 +63,4 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
         platforms: linux/amd64,linux/arm64
+        push: true
