--- a/.github/workflows/build-npu-images.yml
+++ b/.github/workflows/build-npu-images.yml
@@ -59,16 +59,9 @@ jobs:
       with:
         context: ${{ matrix.context }}
         file: ${{ matrix.dockerfile }}
-        push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
         platforms: linux/amd64,linux/arm64
-
-    - name: Build summary
-      if: always()
-      run: |
-        echo "Built image: ${{ matrix.tag }}"
-        echo "Context: ${{ matrix.context }}"
-        echo "Dockerfile: ${{ matrix.dockerfile }}"
+        push: true
