--- a/gpu/inference/Dockerfile
+++ b/gpu/inference/Dockerfile
@@ -7,16 +7,19 @@ ENV DEBIAN_FRONTEND=noninteractive
 ENV PYTHONUNBUFFERED=1
 ENV PYTHONDONTWRITEBYTECODE=1
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    python3 \
-    python3-pip \
-    cmake \
-    git \
-    wget \
-    curl \
-    htop \
-    && rm -rf /var/lib/apt/lists/*
+# Install system dependencies with better error handling
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        python3 \
+        python3-pip \
+        cmake \
+        git \
+        wget \
+        curl \
+        htop \
+        ca-certificates \
+        && rm -rf /var/lib/apt/lists/* \
+        && apt-get clean
 
 # Install Python dependencies with specific versions for better compatibility
 RUN pip3 install --no-cache-dir --upgrade pip setuptools wheel
